<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/rescueFragment"
        android:icon="@drawable/ic_dog_bottom_navigation"
        android:title="@string/bottom_navigation_rescue" />

    <item
        android:id="@+id/wantedFragment"
        android:icon="@drawable/ic_wanted_bottom_navigation"
        android:title="@string/bottom_navigation_wanted" />

    <item
        android:id="@+id/adoptionFragment"
        android:icon="@drawable/ic_adoption_bottom_navigation"
        android:title="@string/bottom_navigation_adoption" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_bottom_navigation"
        android:title="@string/bottom_navigation_profile" />

</menu>