<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.adoption.form.AdoptionFormFragment">

    <ImageView
        android:id="@+id/fragmentAdoptionFormImage"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_add_profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fragmentAdoptionFormName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/fragment_adoption_form_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentAdoptionFormImage" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fragmentAdoptionForBreed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/fragment_adoption_form_breed_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentAdoptionFormName" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/fragmentAdoptionFormSexSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_border_fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentAdoptionFormFur" />

    <ImageView
        android:id="@+id/fragmentAdoptionFormImgSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentAdoptionFormSexSpinner"
        app:layout_constraintEnd_toEndOf="@+id/fragmentAdoptionFormSexSpinner"
        app:layout_constraintTop_toTopOf="@+id/fragmentAdoptionFormSexSpinner" />

    <TextView
        android:id="@+id/fragmentAdoptionFormTexSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fragment_adoption_form_spinner_hint"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentAdoptionFormSexSpinner"
        app:layout_constraintStart_toStartOf="@+id/fragmentAdoptionFormSexSpinner"
        app:layout_constraintTop_toTopOf="@+id/fragmentAdoptionFormSexSpinner" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fragmentAdoptionFormFur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/fragment_adoption_form_fur_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentAdoptionForBreed" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/fragmentAdoptionFormSizeSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_border_fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentAdoptionFormSexSpinner" />

    <ImageView
        android:id="@+id/fragmentAdoptionFormImgSizeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentAdoptionFormSizeSpinner"
        app:layout_constraintEnd_toEndOf="@+id/fragmentAdoptionFormSizeSpinner"
        app:layout_constraintTop_toTopOf="@+id/fragmentAdoptionFormSizeSpinner" />

    <TextView
        android:id="@+id/fragmentAdoptionFormSizeTexSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fragment_adoption_form_size_hint"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentAdoptionFormSizeSpinner"
        app:layout_constraintStart_toStartOf="@+id/fragmentAdoptionFormSizeSpinner"
        app:layout_constraintTop_toTopOf="@+id/fragmentAdoptionFormSizeSpinner" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragmentAdoptionFormButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/fragment_sign_up_button"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentAdoptionFormSizeSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>